Jnj new options (#3)
* v1.1 finished

Co-authored-by: jwalin12 <jwalin12@berkeley.edu>

--- a/src/app/components/marketplace/listings/listings.component.css
+++ b/src/app/components/marketplace/listings/listings.component.css
@@ -5,7 +5,7 @@
     width: 50%;
 }
 
-.sale-btn {
+.rent-btn {
     margin: 10px;
 }
 
@@ -54,4 +54,16 @@ th, td {
 
 .fill {
     width: -webkit-fill-available;
+}
+
+.greyed-out {
+    color: rgba(0,0,0,.4);
+}
+
+.greyed-out:hover {
+    color: initial;
+}
+
+.pointer {
+    cursor: pointer;
 }
